--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -70,15 +70,15 @@
                             <span class="sizesmalll">By {{username}}</span> <br> <br>
                             <a href="/{{name}}/{{id}}" class="btncolorblue">Читать</a>
                         </h5>
-                        
+
                     </div>
                     {{/with}}
                 </div>
             </div>
             <div class="row">
                 {{#each querys}}
-                <div class="col-md-3">
-                    <div class="card-medium">
+                <div class="col-md-3 card">
+                    <div class="card-medium ">
                         <img src="/images/{{img}}" alt="">
                         <hr>
                         <h3>{{this.title}}</h3>
