--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -9,7 +9,8 @@ ul {
 
 .card {
     display: flex;
-    height: 600px;
+    height: 450px;
+    border: 0px !important;
 }
 
 .card img {
@@ -118,4 +119,3 @@ body {
 .sizesmalll {
     font-size: 15px !important;
 }
-
