--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -10,6 +10,7 @@ ul {
 .card {
     display: flex;
     height: 450px;
+    margin-top: 20px !important;
     border: 0px !important;
 }
 
@@ -118,4 +119,30 @@ body {
 
 .sizesmalll {
     font-size: 15px !important;
+}
+
+.profile-card {
+    margin-top: 20px;
+    height: 400px !important;
+    margin-bottom: 10px !important;
+}
+
+.profile-card hr {
+    color: #2A7DE1;
+}
+
+.profile-card img {
+    width: 100%;
+    height: 50%;
+    margin-bottom: 10px;
+}
+
+.profile-card p {
+    font-size: 15px;
+}
+
+.texx {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
