--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -18,12 +18,14 @@
         <div class='row justify-content-md-center'>
             <form action="/loging" method="POST">
                 <div class="mb-3">
-                    <span>Username</span>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="Введите Username">
+                    <span>Email</span>
+                    <input type="text" name="email" id="email" class="form-control"
+                        placeholder="Введите электронную почту">
                 </div>
                 <div class="mb-3">
                     <span>Password</span>
-                    <input type="password" name="password" id="password" class="form-control" placeholder="Введите пароль">
+                    <input type="password" name="password" id="password" class="form-control"
+                        placeholder="Введите пароль">
                 </div>
                 <input type="submit" class="btn btn-primary" value="Log In">
             </form>
